Corrección de la validación de la fecha de préstamo y entrega.